package helron.foundationWizzard.com.ui;

public enum FormType {
    CLASS,LIST;
}
