@startuml

title __UI's Class Diagram__\n


    namespace elron.foundationWizzard.com {
      namespace ui {
        class helron.foundationWizzard.com.ui.Form {
            {static} + DIM : Dimension
            + inputs : LinkedHashMap<String, String>
            # id : String
            - addButtons : List<PlusButton>
            {static} - gb : GridBagLayout
            {static} - gbc : GridBagConstraints
            - validateButton : JButton
            + Form()
            + addComponentToColumnX()
            + addValidateButton()
            + buildField()
            + buildFormRow()
            + getAddButtons()
            + getData()
            + getId()
            + getInputs()
            + getValidateButton()
            + setId()
            + setInputs()
            + setValidateButton()
            - buildEachRows()
            - init()
        }
      }
    }

  


    namespace elron.foundationWizzard.com {
      namespace ui {
        interface helron.foundationWizzard.com.ui.FormSelector {
        }
      }
    }

  


    namespace elron.foundationWizzard.com {
      namespace ui {
        enum FormType {
          CLASS
          LIST
        }
      }
    }

  


    namespace elron.foundationWizzard.com {
      namespace ui {
        class helron.foundationWizzard.com.ui.FormsContainer {
            {static} + dim : Dimension
            ~ formLinkedList : LinkedList<Form>
            + FormsContainer()
            - addPanel()
            - addValidateButton()
            - init()
        }
      }
    }

  


    namespace elron.foundationWizzard.com {
      namespace ui {
        class helron.foundationWizzard.com.ui.Home {
            + Home()
        }
      }
    }

  

    namespace elron.foundationWizzard.com {
      namespace ui {
        class helron.foundationWizzard.com.ui.SplitPanel {
            ~ listData : DefaultListModel<String>
            ~ wantedStructureId : String
            - id : String
            - listPanel : JPanel
            + SplitPanel()
            + getForm()
            + getId()
            + getListPanel()
            - addColumnContent()
            - addList()
            - addPlusButton()
            - initLeftPanel()
        }
      }
    }

  

  helron.foundationWizzard.com.ui.Form -up-|> javax.swing.JPanel
  helron.foundationWizzard.com.ui.Form o-- helron.foundationWizzard.com.datagenerator.DataStructure : dataStructure
  helron.foundationWizzard.com.ui.FormsContainer .up.|> helron.foundationWizzard.com.ui.FormSelector
  helron.foundationWizzard.com.ui.FormsContainer -up-|> javax.swing.JTabbedPane
  helron.foundationWizzard.com.ui.FormsContainer o-- helron.foundationWizzard.com.datagenerator.DataStructureMap : dataStructureMap
  helron.foundationWizzard.com.ui.Home -up-|> javax.swing.JPanel
  helron.foundationWizzard.com.ui.SplitPanel -up-|> javax.swing.JPanel
  helron.foundationWizzard.com.ui.SplitPanel o-- helron.foundationWizzard.com.datagenerator.DataStructure : wantedDataStructure
  helron.foundationWizzard.com.ui.SplitPanel o-- helron.foundationWizzard.com.ui.Form : form


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
